--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.7",
     "nuxt": "^3.13.0",
+    "primevue": "^4.0.7",
+    "tailwindcss-primeui": "^0.3.4",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.1",
+    "@primevue/nuxt-module": "^4.0.7",
+    "tailwindcss": "^3.4.13"
   }
 }
