--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.5",
     "@primevue/themes": "^4.0.7",
     "nuxt": "^3.13.0",
+    "pinia": "^2.2.4",
     "primevue": "^4.0.7",
     "tailwindcss-primeui": "^0.3.4",
     "vue": "latest",
@@ -19,7 +21,11 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@primevue/nuxt-module": "^4.0.7",
     "tailwindcss": "^3.4.13"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
