--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@pinia/nuxt": "^0.5.5",
     "@primevue/themes": "^4.0.7",
+    "date-fns": "^4.1.0",
     "nuxt": "^3.13.0",
     "pinia": "^2.2.4",
+    "primeicons": "^7.0.0",
     "primevue": "^4.0.7",
     "tailwindcss-primeui": "^0.3.4",
     "vue": "latest",
